Main_Folder/MY_PROJECTS/random-quote-gen/src/App.scss
@use './variables';
@import url('https://fonts.googleapis.com/css?family=Raleway:400,500');


.App {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: variables.$theme-color;
  height: 100vh;
  font-family: 'Raleway';

  //PRESENTATIONAL  
  #wrapper{
    opacity: 1;
    #quote-box{
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      height: fit-content;
      width: fit-content;
      min-height:fit-content;
      min-width: 550px;
      max-width: 550px;
      //border:solid yellow;
      border-radius: 1%;
      background-color: white;
      
      #text{
        align-self: center;
        height: fit-content;
        min-width: 80%;
        max-width: 80%;
        margin-top:2.063rem;
        font-size: 30px;
        font-weight: 500;
        //border:dotted variables.$red-color;
        color:variables.$theme-color;
      }
      #author{
        display:flex;
        justify-content: end;
        align-self: center;
        margin-top: 1rem;
        margin-bottom: 1rem;
        min-width: 80%;
        max-width: 80%;
        //border:dotted red;
        color:variables.$theme-color;
      }

      #footer-row{
        display: flex;
        justify-content: space-between;
        align-self: center;
        width:80%;
        //margin-top: 1rem;
        margin-bottom: 1rem;
        //border:dotted blue;
        div{
          display: flex;
          justify-content: start;
          .bg-sync{
            width: 40px;
            height:38px;
            border:none;
            border-radius: 10%;
            color:white;
            background-color:variables.$theme-color;
            margin-right: 5px;
          }
          }
      }
        #new-quote{
          justify-self: end;
          width: 101px;
          height: 38px;
          color:white;
          border-radius: 5%;
          border: none;
          background-color:variables.$theme-color;;
        }
      }
    }
  }
  
  





.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

